# CMSE

./: .gitignore  CMakeLists.txt  README.md
docs/: Buffer_Pool_and_Disk_Manager-14041016.docx  Buffer_Pool_and_Disk_Manager-14041017.docx  CMSE_Developer_Guide.docx  Testing_Strategy-14041017.docx
src/: main.cpp
src/adapter/: bpm_adapter.h  btree_adapter.h  tree_adapter.h  trie_adapter.h
src/bufferpool/: buffer_pool_manager.cpp  buffer_pool_manager.h  lru_replacer.cpp  lru_replacer.h
src/common/: types.h
src/disk/: disk_manager.cpp  disk_manager.h
src/page/: page.h
src/utils/: log_manager.cpp  log_manager.h
src/versioning/: version_manager.h
tests/: buffer_pool_test.cpp  concurrency_test.cpp  disk_robustness_test.cpp  fuzz_test.cpp  log_manager_test.cpp  lru_replacer_test.cpp  memory_edge_test.cpp  persistence_test.cpp
